# pm

./: .dockerignore  .gitignore  Dockerfile  README.md
backend/: AGENTS.md  README.md  pyproject.toml
backend/app/: ai_client.py  board_store.py  chat_service.py  main.py
backend/static/: index.html
backend/tests/: test_ai_client.py  test_chat_service.py  test_main.py
docs/: DATABASE_MODEL.md  PLAN.md
frontend/: AGENTS.md
frontend/src/app/: globals.css
frontend/src/components/: AppShell.test.tsx  AppShell.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  NewCardForm.tsx
frontend/src/lib/: kanban.test.ts  kanban.ts
frontend/test-results/: .last-run.json
frontend/test-results/kanban-moves-a-card-between-columns-chromium/: error-context.md
frontend/test-results/kanban-moves-a-card-into-an-empty-column-chromium/: error-context.md
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
